k8s/20-mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: apps
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      apps: mariadb
  template:
    metadata:
      labels:
        apps: mariadb
    spec:
    securityContext:
      fsGroup: 999
    containers:
      - name: mariadb
        image: mariadb:11
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: stringData
            mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: apps
spec:
  selector:
    apps: mariadb
  ports:
    - name: mysql
    port: 3306
    targetPort: 3306
