k8s/30-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
        - name: wp-data
          persistentVolumeClaim:
            claimName: wp-data-pvc
      spec:
        securityContext:
          fsGroup: 33
      containers:
        - name: wordpress
          image: wordpress:6-php8.2-apache
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: wp-data
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 800m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: apps
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
